# MyForkEditor

./: CMakeLists.txt  License.txt  README.md  rebuild.sh
Source/AlphaEngine/: AlphaEngineApp.cpp  AlphaEngineApp.h  AlphaEngineStd.cpp  AlphaEngineStd.h  CMakeLists.txt
Source/AlphaEngine/Audio/: Audio.cpp  Audio.h  AudioBuffer.cpp  AudioBuffer.h
Source/AlphaEngine/Chemistry/: Chemistry.cpp  NullChemistry.cpp  NullChemistry.h
Source/AlphaEngine/Chemistry/RawMaterial/: RawMaterialData.cpp  RawMaterialData.h
Source/AlphaEngine/Controllers/: MovementController.cpp  MovementController.h
Source/AlphaEngine/Debugging/: Debugging.h  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h
Source/AlphaEngine/EventManager/: BaseEvent.cpp
Source/AlphaEngine/EventManager/Client/: ClientEvents.cpp  ClientEvents.h
Source/AlphaEngine/EventManager/Local/: LocalEvents.cpp
Source/AlphaEngine/EventManager/Server/: ServerEvents.cpp  ServerEvents.h
Source/AlphaEngine/GameAsset/: GAFactory.cpp
Source/AlphaEngine/GameAsset/Components/: MainComponent.cpp  MainComponent.h
Source/AlphaEngine/GameAssetManager_old/: GameAsset.cpp  GameAssetData.cpp  GameAssetManager.cpp  GameAssetRules.cpp
Source/AlphaEngine/GameAssetManager_old/Factory/: BaseComponent.cpp  BaseComponent.h  GameAssetFactory.cpp  GameAssetFactory.h
Source/AlphaEngine/GameLogic/: BaseGameLogic.cpp  BaseGameLogic.h
Source/AlphaEngine/GameLogic/LevelManager/: LevelManager.cpp  LevelManager.h
Source/AlphaEngine/Graphics3D/: Geometry.h
Source/AlphaEngine/Interfaces/: IGameLogic.cpp  IGameLogic.h  IGameView.cpp  IGameView.h  IScreenElement.cpp  IScreenElement.h  Interfaces.h
Source/AlphaEngine/Interfaces/Audio/: IAudio.cpp  IAudio.h  IAudioBuffer.cpp  IAudioBuffer.h
Source/AlphaEngine/Interfaces/Chemistry/: IGameChemistry.cpp  IGameChemistry.h
Source/AlphaEngine/Interfaces/Controllers/: IKeyboardHandler.cpp  IKeyboardHandler.h  IPointerHandler.cpp  IPointerHandler.h
Source/AlphaEngine/Interfaces/Events/: IEventData.cpp
Source/AlphaEngine/Interfaces/ImGui/: ImGuiInterface.cpp  ImGuiInterface.h  ImGuiSettings.cpp  ImGuiSettings.h
Source/AlphaEngine/Interfaces/Network/: IPacket.cpp
Source/AlphaEngine/Interfaces/Physics/: IGamePhysics.cpp
Source/AlphaEngine/Interfaces/Scripting/: IScriptManager.cpp  IScriptManager.h
Source/AlphaEngine/Mainloop/: Initialization.cpp  Initialization.h
Source/AlphaEngine/Mainloop/Activity/: Activity.cpp  Activity.h  ActivityManager.cpp  ActivityManager.h
Source/AlphaEngine/Network/GameView/: NetworkGameView.cpp  NetworkGameView.h
Source/AlphaEngine/Network/Managers/: BaseSocketManager.cpp  BaseSocketManager.h  ClientSocketManager.cpp  ClientSocketManager.h  NetworkEventForwarder.cpp  ServerSocketManager.cpp
Source/AlphaEngine/Network/Packets/: BasePacket.cpp  BasePacket.h  BinaryPacket.cpp  BinaryPacket.h  EventPacket.cpp  EventPacket.h
Source/AlphaEngine/Network/Sockets/: GameServerListenSocket.cpp  NetListenSocket.cpp  NetListenSocket.h  NetSocket.cpp  NetSocket.h  RemoteEventSocket.cpp  (+1 more)
Source/AlphaEngine/Physics/: NullPhysics.cpp  NullPhysics.h  Physics.cpp
Source/AlphaEngine/Resources/: Loading.cpp  Loading.h  ResHandle.cpp  ResHandle.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h
Source/AlphaEngine/UserInterface/: UserInterface.cpp  UserInterface.h
Source/AlphaEngine/Utility/: ApplicationMessage.cpp  ApplicationMessage.h  String.cpp  String.h
Source/HangarsClient/: CMakeLists.txt  HangarsClientApplication.cpp  HangarsClientApplication.h  HangarsClientStd.cpp  HangarsClientStd.h
Source/HangarsClient/GameLogic/: RemoteGameLogic.cpp  RemoteGameLogic.h
Source/HangarsClient/GameView/: HangarsHumanView.cpp  HangarsHumanView.h  MainMenuView.cpp  MainMenuView.h
Source/HangarsClient/UserInterface/: MainMenuUI.cpp  MainMenuUI.h
(+530 files in other folders)
